objects/Account.object
<CustomObject>
    <fields>
        <fullName>Client_Code_No__c</fullName>
        <label>Client Code No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Access_and_Site_Info__c</fullName>
        <description>This is for information to assist Ops personnel and contractors with on-site work.  It is NOT intended to be driver facing.</description>
        <inlineHelpText>This is for information to assist Ops personnel and contractors with on-site work.  It is NOT intended to be driver facing.</inlineHelpText>
        <label>Ops Access and Site Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Nielsen_DMA__c</fullName>
        <description>Inherited from Nielsen DMA field on the associated Zip Object.</description>
        <formula>Zip__r.Nielsen_DMA__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inherited from Nielsen DMA field on the associated Zip Object.</inlineHelpText>
        <label>Zip Nielsen DMA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates to the pre-existing Zip object to relate demographic data</description>
        <inlineHelpText>Relates to the pre-existing Zip object to relate demographic data</inlineHelpText>
        <label>Zip</label>
        <referenceTo>Zip__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Site</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>